load-tests/setup/kit-test-16/camunda-platform-helm/charts/camunda-platform-8.2/test/unit/optimize/golden/ingress.golden.yaml
---
# Source: camunda-platform/charts/optimize/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camunda-platform-test-optimize
  labels: 
    app: camunda-platform
    app.kubernetes.io/name: optimize
    app.kubernetes.io/instance: camunda-platform-test
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: "8.2.14"
    app.kubernetes.io/component: optimize
  annotations: 
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-platform-test-optimize
                port:
                  number: 80
